update remaining usage of login/logged in in favor of sign in

--- a/docs/authentication/social-connections/oauth.mdx
+++ b/docs/authentication/social-connections/oauth.mdx
@@ -48,7 +48,7 @@ With Clerk, you can request additional OAuth scopes even after a user has signed
 
 For [Clerk Components](/docs/components/overview), this is handled automatically by Clerk. You only have to pass the [`additionalOAuthScopes`](/docs/components/user/user-profile) prop in the [`<UserProfile/>`](/docs/components/user/user-profile) component or the corresponding [`userProfileProp`](/docs/components/user/user-button) in the [`<UserButton />`](/docs/components/user/user-button) component, with any additional OAuth scope you would like per provider.
 
-## Get an OAuth access token for a social login provider
+## Get an OAuth access token for a social sign-in provider
 
 You can use a provider's OAuth access token to access user data from that provider in addition to their data from Clerk.
 
