--- a/docs/custom-flows/user-impersonation.mdx
+++ b/docs/custom-flows/user-impersonation.mdx
@@ -5,7 +5,7 @@ description: Learn how to sign in as another user and detect impersonated sessio
 
 # User Impersonation
 
-User Impersonation allows you to sign in as a different user in your application. It allows administrators to access and operate on an instance as if they were logged in as a different user of that instance.
+User Impersonation allows you to sign in as a different user in your application. It allows administrators to access and operate on an instance as if they were signed in as a different user of that instance.
 
 User Impersonation allows one user (Alice) to interact with your application as another (Bob). For the duration of an impersonated session, the application considers Alice to be Bob. Alice is given all the rights that Bob has, and is indistinguishable from Bob in that context.
 
@@ -110,7 +110,7 @@ import { withServerSideAuth } from "@clerk/nextjs";
 // SSR authentication context
 export const getServerSideProps = withServerSideAuth(
   async ({ req }) => {
-    // The request is augmented with an auth object. 
+    // The request is augmented with an auth object.
     // The actor object is available in there.
     const { userId, actor } = req.auth;
 
@@ -125,10 +125,10 @@ function Home({ userId, actor }) {
     <div>
       Server side info:
       <p>
-        {actor && <span>User {actor.sub} has </span>} 
+        {actor && <span>User {actor.sub} has </span>}
         signed in as user {userId}
       </p>
-      
+
       <ClientSideInfo />
     </div>
   )
@@ -142,7 +142,7 @@ function ClientSideInfo() {
     <div>
       Client side info:
       <p>
-        {actor && <span>User {actor.sub} has </span>} 
+        {actor && <span>User {actor.sub} has </span>}
         signed in as user {userId}
       </p>
     </div>
@@ -186,7 +186,7 @@ When working with backend code, Clerk provides middleware that can be used in Ne
 import { withAuth } from "@clerk/nextjs";
 
 export default withAuth(async (req) => {
-  // The request object is augmented with the 
+  // The request object is augmented with the
   // Clerk authentication context.
   const { userId, actor } = req.auth;
 
@@ -203,7 +203,7 @@ const app = express();
 
 // Apply the Clerk express middleware
 app.get(
-  "/protected-endpoint", 
+  "/protected-endpoint",
   ClerkExpressWithAuth({
     // ...options
   }),
@@ -216,7 +216,7 @@ app.get(
   }
 );
 
-app.listen(3000, () => { 
+app.listen(3000, () => {
   console.log("Booted.")
 });
 ```
