--- a/docs/authentication/social-connections/spotify.mdx
+++ b/docs/authentication/social-connections/spotify.mdx
@@ -6,7 +6,7 @@ description: Learn how to set up a social connection with Spotify in your Clerk 
 # Spotify
 
 Learn how to set up a social connection with Spotify in your Clerk application.
-	
+
 Clerk does not currently support preconfigured shared OAuth credentials for Spotify on development instances. You will have to provide custom credentials for both development *and* production instances, which includes generating your own Client ID and Client Secret using your Spotify Developer account. Don't worry, this guide will walk you through that process in just a few simple steps.
 
 ## Before you start
@@ -17,10 +17,10 @@ Clerk does not currently support preconfigured shared OAuth credentials for Spot
 ## Configuration
 
 <Steps>
-	
+
 ### Create a Spotify application
 
-To create a new OAuth Spotify app, go to the [Spotify Developer portal](https://developer.spotify.com/) and log in. Once logged in, navigate to the [Dashboard](https://developer.spotify.com/dashboard/). Click on either of the **Create app** buttons.
+To create a new OAuth Spotify app, go to the [Spotify Developer portal](https://developer.spotify.com/) and sign in. Once signed in, navigate to the [Dashboard](https://developer.spotify.com/dashboard/). Click on either of the **Create app** buttons.
 
 <Images
   width={3024}
@@ -39,10 +39,10 @@ Once redirected to the application creation form, you need to set an **App name*
 />
 
 ### Spotify + your Clerk app
-	
-You can retrieve the **Redirect URI** from the Clerk Dashboard. But first, you need to enable Spotify as a social connection for your Clerk application. 
-	
-In the Clerk Dashboard, go to **User & Authentication > [Social Connections](https://dashboard.clerk.com/last-active?path=user-authentication/social-connections)**. From the list of OAuth vendors, toggle on the Spotify option. 
+
+You can retrieve the **Redirect URI** from the Clerk Dashboard. But first, you need to enable Spotify as a social connection for your Clerk application.
+
+In the Clerk Dashboard, go to **User & Authentication > [Social Connections](https://dashboard.clerk.com/last-active?path=user-authentication/social-connections)**. From the list of OAuth vendors, toggle on the Spotify option.
 
 <Images
   width={3024}
@@ -50,7 +50,7 @@ In the Clerk Dashboard, go to **User & Authentication > [Social Connections](htt
   src="/docs/images/authentication-providers/spotify/enable-spotify.webp"
   alt="The 'Social connections' page in the Clerk Dashboard. A red arrow is pointing to the Spotify toggle."
 />
-	
+
 In the modal that opened, copy **Authorized redirect URI**. Keep this modal and page open.
 
 <Images
@@ -59,10 +59,10 @@ In the modal that opened, copy **Authorized redirect URI**. Keep this modal and 
   src="/docs/images/authentication-providers/spotify/redirect-uri.webp"
   alt="The Spotify settings modal in the Clerk Dashboard. A red arrow is pointing to the 'Redirect URI' copy button."
 />
-	
+
 ### Configure Spotify application
 
-Navigate back to your Spotify app and paste the **Authorized redirect URI** you copied from the Clerk Dashboard into the **Redirect URIs** input. 
+Navigate back to your Spotify app and paste the **Authorized redirect URI** you copied from the Clerk Dashboard into the **Redirect URIs** input.
 
 Agree to Spotify's terms and conditions and click **Save**.
 
@@ -75,7 +75,7 @@ Once your Spotify app is created, you'll be redirected to the app dashboard. Fro
   alt="The Spotify Developer Dashboard for a specific application. A red arrow points to the 'Settings' button."
 />
 
-Copy the **Client ID** and **Client Secret**. Go back to the Clerk Dashboard, where the modal should still be open, and paste these values into the respective fields. 
+Copy the **Client ID** and **Client Secret**. Go back to the Clerk Dashboard, where the modal should still be open, and paste these values into the respective fields.
 
 <Callout type="info">
   If the modal or page is not still open, go to the Clerk Dashboard and navigate to **User & Authentication > [Social Connections](https://dashboard.clerk.com/last-active?path=user-authentication/social-connections)**. Click on the settings cog icon next to the Spotify option. You can now paste the **Client ID** and **Client Secret** into their respective fields.
@@ -89,7 +89,7 @@ Copy the **Client ID** and **Client Secret**. Go back to the Clerk Dashboard, wh
 />
 
 ### Finished 🎉
-	
+
 Congratulations! Social connection with Spotify is now configured for your Clerk application.
 
 </Steps>
