use codeblocktabs to consolidate sections and reduce visual noise

--- a/docs/references/nextjs/clerk-middleware.mdx
+++ b/docs/references/nextjs/clerk-middleware.mdx
@@ -60,10 +60,7 @@ There are two methods that you can use:
 - Use [`auth().protect()`](/docs/references/nextjs/auth#protect) if you want to redirect unauthenticated users to the sign-in route automatically.
 - Use [`auth().userId`](/docs/references/nextjs/auth#retrieving-user-id) if you want more control over what your app does based on user authentication status.
 
-#### Use `auth().protect()`
-
-The following example requires a user to be signed in to view the content for any `/dashboard` route. If the user is not signed in, `auth.protect()` will redirect the user to the sign-in route.
-
+<CodeBlockTabs options={["auth().protect()", "auth().has()"]}>
 ```tsx filename="middleware.ts"
 import {
   clerkMiddleware,
@@ -84,12 +81,6 @@ export const config = {
 };
 ```
 
-#### Use `auth().userId`
-
-If you want to do something other than redirecting the user to the sign-in route, or you want to run custom logic before the redirect happens,  you can use `auth().userId()` to check if the user is signed in and then perform the action you want based on the user's authentication status.
-
-The following example requires a user to be signed in to view the content on any `/dashboard` route. If the user is not signed in, custom logic will run, and [`auth().redirectToSignIn()`](/docs/references/nextjs/auth#redirect-to-sign-in) will redirect the user to the sign-in route.
-
 ```tsx filename="app/middleware.ts"
 import { clerkMiddleware, createRouteMatcher } from '@clerk/nextjs/server';
 
@@ -109,6 +100,7 @@ export default clerkMiddleware((auth, req) => {
 
 export const config = { matcher: ['/((?!.+\\.[\\w]+$|_next).*)', '/', '/(api|trpc)(.*)']};
 ```
+</CodeBlockTabs>
 
 ### Protect routes based on user authorization status
 
@@ -119,10 +111,7 @@ There are two methods that you can use:
 - Use [`auth().protect()`](/docs/references/nextjs/auth#protect) if you want Clerk to return a `404` if the user does not have the role or permission.
 - Use [`auth().has()`](/docs/references/nextjs/auth-object#has) if you want more control over what your app does based on the authorization status.
 
-#### Use `auth().protect()`
-
-The following example requires a user to be signed in to view the content for any `/dashboard` route. If the user is not signed in, `auth.protect()` will return a `404` error.
-
+<CodeBlockTabs options={["auth().protect()", "auth().has()"]}>
 ```tsx filename="middleware.ts"
 import { clerkMiddleware, createRouteMatcher } from '@clerk/nextjs/server';
 
@@ -131,7 +120,7 @@ const isProtectedRoute = createRouteMatcher([
 ]);
 
 export default clerkMiddleware((auth, req) => {
-  // restrict admin routes to users with specific permissions
+  // Restrict admin routes to users with specific permissions
   if (isProtectedRoute(req)) {
     auth().protect(has => {
       return (
@@ -147,12 +136,6 @@ export const config = {
 };
 ```
 
-#### Use `auth().has()`
-
-If you want to do something other than redirecting the user to the sign-in route, or you want to run custom logic before the redirect happens, you can use `auth().has()` to check if the user has the required roles or permissions and then perform the action you want based on the user's authorization status.
-
-The following example requires a user to have the `org:sys_memberships:manage` or `org:sys_domains_manage` permission to view the content on any `/admin` route. If the user does not have the required permissions, custom logic will run, and [`auth().redirectToSignIn()`](/docs/references/nextjs/auth#redirect-to-sign-in) will redirect the user to the sign-in route.
-
 ```tsx filename="middleware.ts"
 import { clerkMiddleware, createRouteMatcher } from '@clerk/nextjs/server';
 
@@ -161,7 +144,7 @@ const isProtectedRoute = createRouteMatcher([
 ]);
 
 export default clerkMiddleware((auth, req) => {
-  // restrict admin routes to users with specific permissions
+  // Restrict admin routes to users with specific permissions
   if (isProtectedRoute(req) &&
     !auth().has({ permission: 'org:sys_memberships:manage' }) ||
     !auth().has({ permission: 'org:sys_domains_manage' })
@@ -177,6 +160,7 @@ export const config = {
   matcher: ['/((?!.*\\..*|_next).*)', '/', '/(api|trpc)(.*)'],
 };
 ```
+</CodeBlockTabs>
 
 ## Protect multiple groups of routes
 
@@ -202,7 +186,7 @@ const isTenentAdminRoute = createRouteMatcher([
 
 
 export default clerkMiddleware((auth, req) => {
-  // restrict admin routes to users with specific permissions
+  // Restrict admin routes to users with specific permissions
   if (isTenantAdminRoute(req)) {
     auth().protect(has => {
       return (
@@ -228,7 +212,7 @@ If you are having issues getting your Middleware dialed in, or are trying to nar
 import { clerkMiddleware } from '@clerk/nextjs/server';
 
 export default clerkMiddleware((auth, req) => {
-  // Your middleware checks
+  // Add your middleware checks
 }, { debug: true })
 
 export const config = {
