add reload method WIP

--- a/docs/references/javascript/user/user.mdx
+++ b/docs/references/javascript/user/user.mdx
@@ -221,6 +221,48 @@ function setProfileImage: (params: SetProfileImageParams) => Promise<ImageResour
 | `name` | `string \| null` | The name of the image. |
 | `publicUrl` | `string \| null` | The publically accessible url for the image. |
 
+### `reload()`
+
+Reloads the user's data from the server.
+
+```js
+function reload: (p?: ClerkResourceReloadParams) => Promise<this>;
+```
+
+#### `ClerkResourceReloadParams`
+
+| Name | Type | Description |
+| --- | --- | --- |
+| `rotatingTokenNonce?` | `string` | A nonce to use for rotating the user's token. |
+
+#### `reload()` example
+
+<InjectKeys>
+
+<CodeBlockTabs type="npm-script" options={['NPM module', '<script>']}>
+  ```js filename="main.js"
+  import Clerk from '@clerk/clerk-js';
+
+  // Initialize Clerk with your Clerk publishable key
+  const clerk = new Clerk('{{pub_key}}');
+  await clerk.load();
+
+  await clerk.user.reload();
+  ```
+
+  ```html filename="index.html"
+  <script>
+    window.addEventListener("load", async function () {
+      await Clerk.load();
+
+      await Clerk.user.reload();
+    });
+  </script>
+  ```
+</CodeBlockTabs>
+
+</InjectKeys>
+
 ### `getSessions()`
 
 Retrieves all **active** sessions for this user. This method uses a cache so a network request will only be triggered only once.
