remove typescript from js example

--- a/docs/backend-requests/handling/nodejs.mdx
+++ b/docs/backend-requests/handling/nodejs.mdx
@@ -1,6 +1,6 @@
 ---
 title: Handling requests with Node.js and Express
-description: Learn how to handle authenticated requests with Node.js and Express middleware using Clerk. 
+description: Learn how to handle authenticated requests with Node.js and Express middleware using Clerk.
 ---
 
 # Handling requests with Node.js and Express
@@ -9,11 +9,9 @@ description: Learn how to handle authenticated requests with Node.js and Express
 
 The Clerk Node SDK offers two authentication middlewares specifically for [Express](https://expressjs.com/) and Connect/Express compatible frameworks such as [Gatsby](https://www.gatsbyjs.com/docs/reference/functions/middleware-and-helpers/#custom-middleware) and [Fastify](https://www.fastify.io/docs/latest/Reference/Middleware/).
 
-
-
 ## `ClerkExpressWithAuth()`
 
-`ClerkExpressWithAuth` is a lax middleware that returns an empty auth object when an unauthenticated request is made.
+`ClerkExpressWithAuth()` is a lax middleware that returns an empty auth object when an unauthenticated request is made.
 
 <CodeBlockTabs type="js-ts" options={["JavaScript", "TypeScript"]}>
   ```js
@@ -83,7 +81,7 @@ app.listen(port, () => {
 
 ## `ClerkExpressRequireAuth()`
 
-`ClerkExpressRequireAuth` is a strict middleware that raises an error when an unauthenticated request is made.
+`ClerkExpressRequireAuth()` is a strict middleware that raises an error when an unauthenticated request is made.
 
 <CodeBlockTabs type="js-ts" options={["JavaScript", "TypeScript"]}>
   ```js
@@ -100,7 +98,7 @@ app.listen(port, () => {
     ClerkExpressRequireAuth({
       // ...options
     }),
-    (req: RequireAuthProp<Request>, res) => {
+    (req, res) => {
       res.json(req.auth);
     }
   );
@@ -113,8 +111,6 @@ app.listen(port, () => {
   app.listen(port, () => {
     console.log(`Example app listening at http://localhost:${port}`);
   });
-
-  
   ```
 
   ```typescript
