add reload method WIP2

--- a/docs/references/react/use-user.mdx
+++ b/docs/references/react/use-user.mdx
@@ -82,6 +82,8 @@ export default function Home() {
 
 To retrieve the latest user data after updating the user elsewhere, use the `user.reload()` method.
 
+For more information on the `reload()` method, see the [`User`](/docs/references/javascript/user/user#reload) reference.
+
 ```tsx filename="home.tsx"
 import { useUser } from "@clerk/clerk-react";
 
@@ -100,7 +102,7 @@ export default function Home() {
     const updateMetadata = await fetch("/api/updateMetadata");
 
     // Check if the update was successful
-    if (!updateMeta.message === "success") {
+    if (!updateMetadata.message === "success") {
       throw new Error("Error updating");
     }
 
