--- a/docs/references/javascript/user/user.mdx
+++ b/docs/references/javascript/user/user.mdx
@@ -223,7 +223,7 @@ function setProfileImage: (params: SetProfileImageParams) => Promise<ImageResour
 
 ### `reload()`
 
-Reloads the user's data from the server.
+Reloads the user's data from Clerk's API. This method is useful when you want to refresh the user's data after performing some form of mutation.
 
 ```js
 function reload: (p?: ClerkResourceReloadParams) => Promise<this>;
@@ -233,7 +233,7 @@ function reload: (p?: ClerkResourceReloadParams) => Promise<this>;
 
 | Name | Type | Description |
 | --- | --- | --- |
-| `rotatingTokenNonce?` | `string` | A nonce to use for rotating the user's token. |
+| `rotatingTokenNonce?` | `string` | A nonce to use for rotating the user's token. Used in native application OAuth flows to allow the native client to update its JWT once despite changes in its rotating token. |
 
 #### `reload()` example
 
