--- a/docs/references/javascript/clerk/build-urls.mdx
+++ b/docs/references/javascript/clerk/build-urls.mdx
@@ -60,7 +60,7 @@ Returns the configured url where [`<SignIn />`](/docs/components/authentication/
 function buildSignUpUrl(options?: RedirectOptions): string;
 ```
 
-Returns the configured url where <code><a href="/docs/references/javascript/clerk/sign-up">SignUp</a></code> is mounted or a custom sign-up page is rendered.
+Returns the configured url where [`<SignUp />`](/docs/components/authentication/sign-up) is mounted or a custom sign-up page is rendered.
 
 ### Properties
 
@@ -108,13 +108,13 @@ Returns the url that you've configured in your app's Clerk dashboard.
 function buildCreateOrganizationUrl(): string;
 ```
 
-Returns the configured url where [`CreateOrganization`](/docs/components/organization/create-organization) is mounted or a custom create-organization page is rendered.
+Returns the configured url where [`<CreateOrganization />`](/docs/components/organization/create-organization) is mounted or a custom create-organization page is rendered.
 
 ### Returns
 
 | Type | Description |
 | --- | --- |
-| `string` | The configured url where [`CreateOrganization`](/docs/components/organization/create-organization) is mounted or a custom create-organization page is rendered. |
+| `string` | The configured url where [`<CreateOrganization />`](/docs/components/organization/create-organization) is mounted or a custom create-organization page is rendered. |
 
 ## `buildOrganizationProfileUrl()`
 
